syntax = "proto3";

package order;

service Order {


  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {}

}


message GetOrderRequest {
  string Id = 1;
}

 

// The response message containing the greetings

message GetOrderResponse {

  string message = 1;

}
